tests/baselines/reference/signatureLengthMismatchWithOptionalParameters.errors.txt
signatureLengthMismatchWithOptionalParameters.ts(5,8): error TS2345: Argument of type '(n: number, m: string) => void' is not assignable to parameter of type '(n?: number) => void'.
  Target signature provides too few arguments. Expected 2 or more, but got 1.


==== signatureLengthMismatchWithOptionalParameters.ts (1 errors) ====
    function callee(n: number | undefined, m: string) { }
    
    function caller(arg: (n?: number) => void) { }
    
    caller(callee);
           ~~~~~~
!!! error TS2345: Argument of type '(n: number, m: string) => void' is not assignable to parameter of type '(n?: number) => void'.
!!! error TS2345:   Target signature provides too few arguments. Expected 2 or more, but got 1.
    